# OpenCV

detectPimple/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detect_pimple
detectPimple/src/: detect_pimple.cpp  main.cpp  matchs.cpp
split_merge/src/:  main.cpp
test/: CMakeLists.txt
test/src/: imwriteTest.cpp  main.cpp
